plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'org.apache.commons:commons-csv:1.9.0'
    testImplementation 'org.testng:testng:7.4.0'
}

application {
    mainClass = 'lyrics.LyricsApp'
}

tasks.withType(JavaExec) {
    enableAssertions = true
}

tasks.named('test') {
    useTestNG()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}